--- a/8-view-engine/views/partials/links.ejs
+++ b/8-view-engine/views/partials/links.ejs
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
-<link rel="stylesheet" href="/public/css/style.css" />
+<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="/public/css/style.css">
 <script defer src="/jquery/dist/jquery.min.js"></script>
 <script defer src="/bootstrap/dist/js/bootstrap.min.js"></script>
 <script defer src="/public/js/script.js"></script>
