--- a/8-view-engine/views/index.ejs
+++ b/8-view-engine/views/index.ejs
@@ -9,7 +9,7 @@
     <%- include('partials/links')%>
   </head>
 
-  <body class="<%= dark==true? 'dark': 'light'%>">
+  <body class="<%= dark==false? 'dark': 'light'%>">
     <div class="container">
       <!-- navbar starts -->
       <%- include('partials/navbar')%>
