--- a/8-view-engine/views/services.ejs
+++ b/8-view-engine/views/services.ejs
@@ -7,7 +7,7 @@
     <title>Services Page</title>
     <%- include('partials/links')%>
 </head>
-<body class="<%= dark==true? 'dark': 'light'%>">
+<body class="<%= dark==false? 'dark': 'light'%>">
 
     <div class="container">
             <!-- navbar starts -->
