--- a/9-ejs-task/public/css/style.css
+++ b/9-ejs-task/public/css/style.css
@@ -1,22 +1,24 @@
 body {
-    background-color: #2e2e2e;
-    color: #e2e2e2;
+  background-color: #2e2e2e;
+  color: #e2e2e2;
 }
 
-.product-logo{
-    width: 100%;
-    height: 30vh;
-    border: 1px solid orange;
-    border-radius: 20px;
-    margin-bottom: 10px;
-    transition: 1s;
+.product-logo {
+  width: 100%;
+  height: 28vh;
+  border: 1px solid orange;
+  border-radius: 20px;
+  margin-bottom: 10px;
+  transition: 1s;
 }
-.product-logo:hover{
-    transform: scale(1.5);
-    
+
+.card-body {
+  height: 63vh;
 }
-.card-body{
-    height: 60vh;
-    overflow-y: scroll;
-    scroll-behavior: smooth;
+.product-img {
+  width: 100%;
+  height: 40vh;
+}
+.product-body {
+  padding: 2%;
 }
