--- a/multipages_project/views/index.ejs
+++ b/multipages_project/views/index.ejs
@@ -46,39 +46,9 @@
 <body>
 
     <header id="masthead" class="site-header">
-        <nav id="primary-navigation" class="site-navigation">
-            <div class="container">
-
-                <div class="navbar-header">
-                   
-                    <a class="site-title"><span>Agency</span>Perfect</a>
-
-                </div><!-- /.navbar-header -->
-
-                <div class="collapse navbar-collapse" id="agency-navbar-collapse">
-
-                    <ul class="nav navbar-nav navbar-right">
-
-                        <li class="active"><a href="index.html" data-toggle="dropdown">Home</a></li>
-                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages<i class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a>
-
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                              <li><a href="portfolio.html">Portfolio</a></li>
-                              <li><a href="blog.html">Blog</a></li>
-                            </ul>
-
-                        </li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="ui-elements.html">UI Elements</a></li>
-
-                    </ul>
-
-                </div>
-
-            </div>   
-        </nav><!-- /.site-navigation -->
+      <!--NAVBAR START-->
+      <%- include('partials/navbar.ejs',  {page: 'index'})%>
+      <!-- NAVBAR END-->
     </header><!-- /#mastheaed -->
 
     <div id="hero" class="hero overlay">
@@ -287,57 +257,9 @@
 
     </main><!-- /#main -->
 
-    <footer id="colophon" class="site-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-4 col-xs-6">
-                    <a class="site-title"><span>Agency</span>Perfect</a>
-                    <p>We're a digital agency focused on creative and results-driven solutions.</p>
-                    <p>We measure our success by the results we drive for our clients.</p>
-                </div>
-                <div class="col-lg-offset-4 col-md-3 col-sm-4 col-md-offset-2 col-sm-offset-0 col-xs-6 ">
-                    <h3>Keep in touch</h3>
-                    <ul class="list-unstyled contact-links">
-                        <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:info@agencyperfect.com">info@agencyperfect.com</a></li>
-                        <li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:+37400800000">+374 (00) 80 00 00 </a></li>
-                        <li><i class="fa fa-fax" aria-hidden="true"></i><a href="+37400900000">+374 (00) 90 00 00</a></li>
-                        <li><i class="fa fa-map-marker" aria-hidden="true"></i><p>20 Leo, Armenia</p></li>
-                    </ul>
-                </div>
-                <div class="clearfix visible-xs"></div>
-                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-                    <h3>Featured links</h3>
-                    <ul class="list-unstyled">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="portfolio.html">Porfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-8">
-                        <div class="social-links">
-                            <a class="twitter-bg" href="#"><i class="fa fa-twitter"></i></a>
-                            <a class="facebook-bg" href="#"><i class="fa fa-facebook"></i></a>
-                            <a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
-                            <a class="linkedin-bg" href="#"><i class="fa fa-linkedin"></i></a>
-                        </div><!-- /.social-links -->
-                    </div>
-                    <div class="col-xs-4">
-                        <div class="text-right">
-                            <p>&copy; AgencyPerfect</p>
-                            <p>All Rights Reserved</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div><!-- /.copyright -->
-    </footer><!-- /#footer -->
-
+    <!-- FOOTER START -->
+    <%- include('partials/footer.ejs')%>
+    <!-- FOOTER END-->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
