--- a/11-sending_data_forms/views/add.ejs
+++ b/11-sending_data_forms/views/add.ejs
@@ -9,10 +9,10 @@
 <body>
     <form action="/add" method="POST">
         <label for="">Name</label>
-        <input type="text" name="name" placeholder="Name" />
+        <input type="text" name="name" placeholder="Name" required />
         <br>
         <label for="">Age</label>
-        <input type="number" name="age" placeholder="Age" />
+        <input type="number" name="age" placeholder="Age" required />
         <br>
         <input type="submit" value="Add" />
     </form>
