--- a/react-sil/src/index.css
+++ b/react-sil/src/index.css
@@ -1,13 +1,127 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.welcome_box {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: blueviolet;
+  flex-direction: column;
+}
+.box {
+  width: 350px;
+  text-align: center;
+  background-color: white;
+  border-radius: 5px;
+  height: 140px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.box p {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: cursive;
+  color: green;
+}
+.box button {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  background-color: blueviolet;
+  font-weight: bold;
+  color: white;
+  font-size: 1.1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.box button:hover {
+  background-color: slateblue;
+}
+
+/*  STYLING FOR QUESTION SECTION */
+.question {
+  background-color: white;
+  width: 600px;
+  padding: 20px;
+  border-radius: 5px;
+}
+.question_number {
+  height: 40px;
+  background-color: antiquewhite;
+  font-size: 1.3rem;
+  font-family: sans-serif;
+  line-height: 40px;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+}
+.question_title {
+  margin-bottom: 20px;
+}
+.question_title p {
+  font-size: 1.1rem;
+  font-family: cursive;
+}
+.question_options {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 20px;
+}
+
+.question_options > div {
+  height: 40px;
+  border-radius: 10px;
+  line-height: 40px;
+  font-size: 1.2rem;
+  font-family: cursive;
+  padding-left: 10px;
+  border: 1px solid skyblue;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+.question_options > div:hover {
+  background-color: green;
+  color: white;
+}
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 640px;
+  border-radius: 10px;
+}
+
+.buttons button {
+  margin-top: 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+}
+.buttons button:nth-child(2) {
+  background-color: green;
+}
+.buttons button:nth-child(1) {
+  background-color: skyblue;
+}
+
+.submit {
+  padding: 10px 20px;
+  border-radius: 10px;
+  background-color: transparent;
+  border: 1px solid red;
+  font-weight: bold;
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: red;
 }
