--- a/birth-date/src/index.css
+++ b/birth-date/src/index.css
@@ -9,7 +9,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: #f28ab2;
+  background: #8a91f2;
   color: hsl(209, 61%, 16%);
   line-height: 1.5;
   font-size: 0.875rem;
@@ -105,7 +105,7 @@ main {
   display: block;
   width: 100%;
   border-color: transparent;
-  background: #f28ab2;
+  background: #8a91f2;
   margin: 2rem auto 0 auto;
   text-transform: capitalize;
   font-size: 1.2rem;
