--- a/multipages_project_blog/views/index.ejs
+++ b/multipages_project_blog/views/index.ejs
@@ -152,7 +152,7 @@
                     <div class="col-sm-3 col-xs-6">
                         <div class="counter-item">
                             <p class="counter" data-to="377" data-speed="2000">0</p>
-                            <h3>Cofee Cups</h3>
+                            <h3>Coffee Cups</h3>
                         </div><!-- /.counter-item -->
                     </div>
                     <div class="col-sm-3 col-xs-6">
