--- a/multipages_project_blog/views/partials/navbar.ejs
+++ b/multipages_project_blog/views/partials/navbar.ejs
@@ -7,13 +7,9 @@
 
     <div class="collapse navbar-collapse" id="agency-navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="<%= page === 'index' ? 'active' : '' %>">
-          <a href="/index" data-toggle="dropdown">Home</a>
-        </li>
+        <li class="<%= page === 'index' ? 'active' : '' %>"><a href="/">Home</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-            >Pages<i class="fa fa-caret-down hidden-xs" aria-hidden="true"></i
-          ></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages<i class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a>
 
           <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
             <li class="<%= page === 'portfolio' ? 'active' : '' %>"><a href="/portfolio">Portfolio</a></li>
@@ -24,6 +20,7 @@
         <li class="<%= page === 'blog' ? 'active' : '' %>"><a href="/blog">Blog</a></li>
         <li class="<%= page === 'contact' ? 'active' : '' %>"><a href="/contact">Contact</a></li>
         <li class="<%= page === 'ui-elements' ? 'active' : '' %>"><a href="/ui-elements">UI Elements</a></li>
+        <li class="<%= page === 'register' ? 'active' : '' %>"><a href="/register">Register</a></li>
       </ul>
     </div>
   </div>
