--- a/multipages_project_blog/views/partials/footer.ejs
+++ b/multipages_project_blog/views/partials/footer.ejs
@@ -19,10 +19,10 @@
             <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                 <h3>Featured links</h3>
                 <ul class="list-unstyled">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="portfolio.html">Porfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="blog">Blog</a></li>
+                    <li><a href="portfolio">Porfolio</a></li>
+                    <li><a href="contact">Contact</a></li>
                 </ul>
             </div>
         </div>
