I added authors selection

--- a/17-schema-populate/views/error.ejs
+++ b/17-schema-populate/views/error.ejs
@@ -6,25 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Error</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
-    <style>
-      body {
-        background-color: #2e2e2e;
-        color: white;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <%- include('partials/navbar') %>
-    <h1 class="text-center bg-danger display-4">Error</h1>
+    <%- include('partials/navbar')%>
+    
     <div class="container">
+      <h1 class="text-center bg-danger display-4">Error</h1>
       <div class="row">
         <div class="col-md-12">
           <pre class="text-warning display-7"><%= error%></pre>
         </div>
       </div>
     </div>
-
+    <%- include('partials/modal')%>
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
