--- a/17-schema-populate/views/addAuthor.ejs
+++ b/17-schema-populate/views/addAuthor.ejs
@@ -6,18 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Author</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
-
-    <style>
-        body{
-            background-color: #2e2e2e;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <%- include('partials/navbar') %>
-    <h1 class="text-center">Add Author</h1>
+    <%- include('partials/navbar')%>
+    
     <div class="container">
+        <h1 class="text-center">Add Author</h1>
         <div class="col-md-6">
             <form action="/admin/addauthor" method="post" onsubmit="submitForm(event)">
                 <div class="form-group">
@@ -52,57 +47,10 @@
     </div>
 
 
-    <div id="message" class="modal" tabindex="-1">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title text-dark" >Modal title</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body text-dark" id="messageText">
-              <p>Modal body text goes here.</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
-        </div>
-      </div>
+    <%- include('partials/modal')%>
 
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        function submitForm(e){
-            e.preventDefault()
-            let form = $(e.target)
-            console.log(form.serialize())
-            // show loader
-            $("#loader").show()
-            $.ajax({
-                url: form.attr('action'),
-                method: form.attr('method'),
-                data: form.serialize(),
-                success: response=>{
-                    if(response.success){
-                        $('#message').modal('show')
-                        $(".modal-title").html("success")
-                        $("#messageText").html(response.success)
-                        // hide loader
-                        $("#loader").hide()
-                        console.log(response.result)
-                    }else{
-                        $('#message').modal('show')
-                        $(".modal-title").html("Error")
-                        $("#messageText").html(response.error)
-                        $("#loader").hide()
-                    }
-                },
-                error: (xhr, status, error)=>{
-                    console.log(error)
-                }
-            })
-        }
-    </script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
