--- a/17-schema-populate/views/book.ejs
+++ b/17-schema-populate/views/book.ejs
@@ -6,18 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= book.title%></title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
-    <style>
-      body {
-        background-color: #2e2e2e;
-        color: white;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-
-    <%- include('partials/navbar') %>
-    <h1 class="text-center display-3"><%= book.title%></h1>
+    <%- include('partials/navbar')%>
+    
     <div class="container">
+        <h1 class="text-center display-3"><%= book.title%></h1>
         <div class="row">
             <div class="col-md-12">
                 <p>Author: <strong><%= book.author.name%></strong></p>
@@ -29,8 +24,9 @@
             </div>
         </div>
     </div>
-
+    <%- include('partials/modal')%>
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
