--- a/17-schema-populate/views/search.ejs
+++ b/17-schema-populate/views/search.ejs
@@ -11,34 +11,15 @@
   <body>
     <%- include('partials/navbar')%>
 
-    
     <div class="container">
-      <h1 class="text-center display-4">Book Store</h1>
-     
-      <div class="row">
-        <div class="col-md-6 mb-5">
-          <form action="/books" method="get">
-            <div class="form-group">
-              <label for="">Authors</label>
-              <select name="author" class="form-select" onchange="this.form.submit()" id="authorsSelect">
-                <option value="">All Authors</option>
-              </select>
-            </div>
-          </form>
-        </div>
-      </div>
+        <h1 class="text-center display-4">Search Results (<%= books.length%>)</h1>
       <% books.forEach((book, loop)=>{ %>
       <!-- First loop must open a row div -->
       <% if (loop === 0){ %>
+      <div class="row"><%}else{%> <% if(loop % 4 === 0){ %></div>
       <div class="row">
-        <%}else{%> 
-          <% if(loop % 4 === 0){ %>
-          </div>
-      <div class="row">
-        <%}%> 
-        <%}%>
+        <%}%> <%}%>
         <div class="col-md-3 mb-3">
-          
           <div class="card" style="width: 100%; height: 100%">
             <div class="card-body bg-dark border p-4">
               <h5 class="card-title"><%= book.title%></h5>
